# polysport

./: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile  README.md  agent.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: diagrams.md
scripts/: export_repo_zip.sh
src/app/: config.py  health.py  main.py
src/execution/: engine.py  orders.py  slippage.py
src/odds/: fair_prob.py  normalize.py
src/odds/providers/: provider_base.py  provider_example.py
src/polymarket/: client.py  execution.py  market_data.py  models.py
src/risk/: engine.py  limits.py
src/signals/: engine.py  types.py
src/signals/strategies/: drift_late_info.py  hedged_portfolio.py  mean_reversion.py  orderbook_imbalance.py  smart_money_confirm.py  vegas_value.py
src/storage/: db.py  schema.py  schema.sql
src/telegram/: auth.py  bot.py  commands.py  rate_limit.py  runner.py  validation.py
src/utils/: idempotency.py  retry.py
src/wallets/: features.py  scoring.py  tracker.py
tests/unit/: test_database.py  test_execution.py  test_odds.py  test_rate_limit.py  test_retry.py  test_risk.py  test_telegram_commands.py  test_validation.py
